Many improvements, fixed Tag persistence.